--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,12 @@
 language: ruby
+
+services: postgresql
 rvm:
 - 2.6.0
+
+before_script:
+  - psql -c 'create database hubble_time_test;' -U postgres
+
 deploy:
   provider: heroku
   api_key:
